--- a/platformio.ini
+++ b/platformio.ini
@@ -95,3 +95,8 @@ lib_deps =
 	;chegewara/EspTinyUSB
 	bitbank2/AnimatedGIF
 
+src_filter = 
+    +<*>
+
+[env:m5stack-cplus2]
+upload_port = COM4  ; Replace X with your actual port number
